src/test/ui/associated-types/associated-types-eq-3.stderr
error[E0308]: mismatched types
  --> $DIR/associated-types-eq-3.rs:23:18
   |
LL |     let _: Bar = x.boo();
   |                  ^^^^^^^ expected struct `Bar`, found associated type
   |
   = note: expected type `Bar`
              found type `<I as Foo>::A`

error[E0271]: type mismatch resolving `<isize as Foo>::A == Bar`
  --> $DIR/associated-types-eq-3.rs:38:5
   |
LL |     foo1(a);
   |     ^^^^ expected usize, found struct `Bar`
   |
   = note: expected type `usize`
              found type `Bar`
note: required by `foo1`
  --> $DIR/associated-types-eq-3.rs:18:1
   |
LL | fn foo1<I: Foo<A=Bar>>(x: I) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0271]: type mismatch resolving `<isize as Foo>::A == Bar`
  --> $DIR/associated-types-eq-3.rs:41:9
   |
LL |     baz(&a);
   |         ^^ expected usize, found struct `Bar`
   |
   = note: expected type `usize`
              found type `Bar`
   = note: required for the cast to the object type `dyn Foo<A = Bar>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
